--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -23,13 +23,16 @@
             </li>
             <li class="language">设计语言</li>
             <li>
-                <a class="first-show" href="#">基础组件</a>
+                <a  href="/tinper-bee">基础组件</a>
             </li>
             <li>
                 <a href="/tinper-acs">应用组件</a>
             </li>
             <li>
                 <a target="_blank" href="/case/preview">典型案例</a>
+            </li>
+            <li>
+                <a href="#">ucf-web</a>
             </li>
             <li class="lang-select">
                 <div class="u-select u-select-focused u-select-enabled" id="selectLang">
@@ -75,9 +78,12 @@
         <ul id="itemList0">
             <li><a href="/" >首页</a></li>
             <li class="lang">设计语言</li>
-            <li class="basecomp"><a href="#">基础组件</a></li>
+            <li><a href="/tinper-bee">基础组件</a></li>
             <li><a href="/tinper-acs">应用组件</a></li>
-            <li style="border-bottom:1px solid #C0C0C0;"><a target="_blank" href="/case/preview">典型案例</a></li>
+            <li><a target="_blank" href="/case/preview">典型案例</a></li>
+            <li class="basecomp">
+                 <a href="#">ucf-web</a>
+            </li>
         </ul>
     </span>
 </div>
