--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -2,13 +2,13 @@
     <div class="u-col-md-12 nav-left">
         <span class="nav-logo ">
             <a href="/">
-                ucf-web
+                <img src='http://iuap-design-cdn.oss-cn-beijing.aliyuncs.com/static/tinper-bee/logo/ucf-web.svg'/>
             </a>
         </span>
         <span class="nav-split">|</span>
         <span class="nav-search">
             <div class="u-form-control-search u-form-control-affix-wrapper">
-                <input id="componentSearch" placeholder="在iuap design 中搜索" class="u-form-control " />
+                <input id="componentSearch" placeholder="在 UCF-Web 中搜索" class="u-form-control " />
                 <div class="u-form-control-suffix">
                     <i class="uf uf-search"></i>
                 </div>
