--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -5,8 +5,8 @@
                 <img src='http://iuap-design-cdn.oss-cn-beijing.aliyuncs.com/static/tinper-bee/logo/ucf-web.svg'/>
             </a>
         </span>
-        <span class="nav-split">|</span>
-        <span class="nav-search">
+        <span class="nav-split" style="display:none">|</span>
+        <span class="nav-search" style="display:none">
             <div class="u-form-control-search u-form-control-affix-wrapper">
                 <input id="componentSearch" placeholder="在 UCF-Web 中搜索" class="u-form-control " />
                 <div class="u-form-control-suffix">
