--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>一套面向企业数字化的用户体验系统，基于简、晰、智、敏的模块化设计理念提供通用设计资源、UI 组件、场景化模板等研发资产，让设计人员及开发者专注于极致体验</title>
+    <title>UCF-WEB 是一个专注性能和效率的微前端框架，通过将工具、标准组件体系、解决方案、最佳实践融为一体，为复杂的企业级应用提供类微服务化的开发实践。</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="一套面向企业数字化的用户体验系统，基于简、晰、智、敏的模块化设计理念提供通用设计资源、UI 组件、场景化模板等研发资产，让设计人员及开发者专注于极致体验">
-    <meta name="keywords" content="tinper-bee, tinper, bee,iuap design">
-    <meta name="keywords" content="react, UI, framework">
+    <meta name="description" content="UCF-WEB 是一个专注性能和效率的微前端框架，通过将工具、标准组件体系、解决方案、最佳实践融为一体，为复杂的企业级应用提供类微服务化的开发实践。">
+    <meta name="keywords" content="UCF-WEB, UCF, yonyou, 中台, 中台前端技术收敛化">
+    <meta name="keywords" content="UI">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit">
     <link rel="icon" href="//design.yonyoucloud.com/static/tinper-bee/images/favicon.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="//design.yonyoucloud.com/static/highlight/9.15.6/default.min.css"> 
-    <link href="//design.yonyoucloud.com/static/tinper-bee/test/2.0.10-alpha.0/tinper-bee.css" rel="stylesheet" media="screen" />
+    <link href="//design.yonyoucloud.com/static/tinper-bee/2.0.9/assets/tinper-bee.css" rel="stylesheet" media="screen" />
     <link rel="stylesheet" href="//design.yonyoucloud.com/static/docSearch/docsearch.min.css" /> 
     <link rel="stylesheet" href="./css/atom-one-dark.css" type="text/css"/>
     <link rel="stylesheet" href="./css/layout.css" type="text/css"/>
