--- a/static/css/narbar.css
+++ b/static/css/narbar.css
@@ -18,7 +18,10 @@
     display: inline-block;
     width: 100%;
     cursor: pointer;
-    padding-left:80px; 
+    padding-left:55px;
+    font-family: Avenir,-apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol',sans-serif;
+    font-weight: 500;
+    font-size: 20px;
 }
 .nav .nav-left .nav-logo a img{
     height: 30px;
