修改logo、增加主题文档

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>UCF-WEB 是一个专注性能和效率的微前端框架，通过将工具、标准组件体系、解决方案、最佳实践融为一体，为复杂的企业级应用提供类微服务化的开发实践。</title>
+    <title>MDF 基于元数据的模型驱动开发框架</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="UCF-WEB 是一个专注性能和效率的微前端框架，通过将工具、标准组件体系、解决方案、最佳实践融为一体，为复杂的企业级应用提供类微服务化的开发实践。">
-    <meta name="keywords" content="UCF-WEB, UCF, yonyou, 中台, 中台前端技术收敛化">
+    <meta name="description" content="MDF 基于元数据的模型驱动开发框架。">
+    <meta name="keywords" content="MDF, 元数据, yonyou, 中台, 中台前端技术收敛化">
     <meta name="keywords" content="UI">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit">
