--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -2,7 +2,7 @@
     <div class="u-col-md-12 nav-left">
         <span class="nav-logo ">
             <a href="/">
-                MDF | 模型驱动开发框架
+                <img src='http://iuap-design-cdn.oss-cn-beijing.aliyuncs.com/static/tinper-bee/logo/MDF-01.svg'/>
             </a>
         </span>
         <span class="nav-split" style="display:none">|</span>
