--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,6 +1,7 @@
 body{
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 .navbar {
     background: #808080;
     height: 65px;
@@ -8,11 +9,11 @@ body{
 
 .content {
     width: 100%;
-
+    height: 100%;
 }
 
 .sidebar {
-    width: 250px;
+    width:300px;
     display: inline-block;
     vertical-align: top;
     position: fixed;
@@ -28,16 +29,17 @@ body{
 .docs {
     display: inline-block;
     vertical-align: top;
-    width: calc(100% - 300px);
     padding-left: 40px;
-    margin-left: 250px;
+    margin-left: 300px;
+    position: fixed; 
+    overflow: auto; 
+    height: 100%;
 }
 .footer-out {
     background: #424242;
-    margin-left: 249px;
     margin-top: 60px;
     position: relative;
-    z-index: 2;
+    overflow: hidden;
 }
 .u-row{
     margin: 0!important;
@@ -46,11 +48,14 @@ body{
     padding: 0!important;
 }
 
+.docs::-webkit-scrollbar {
+    width: 0!important;
+    height: 0!important;
+}
 body::-webkit-scrollbar {
     width: 0!important;
     height: 0!important;
 }
-
 /* 滚动槽 */
 
 body::-webkit-scrollbar-track {
