--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -31,6 +31,12 @@
     content: "\e608";
     margin-right: 20px;
 }
+
+.sidebar::-webkit-scrollbar {
+    width: 0!important;
+    height: 0!important;
+}
+
 .sidebar .menu-components li a.icon-close + ul{
     display: none;
 }
