--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -9,7 +9,6 @@ body{
 
 .content {
     width: 100%;
-    height: 100%;
 }
 
 .sidebar {
@@ -31,15 +30,16 @@ body{
     vertical-align: top;
     padding-left: 40px;
     margin-left: 300px;
-    position: fixed; 
-    overflow: auto; 
+    overflow: scroll; 
     height: 100%;
 }
 .footer-out {
     background: #424242;
     margin-top: 60px;
     position: relative;
-    overflow: hidden;
+    margin-left: 300px;
+    z-index: 2;
+    bottom: 0;
 }
 .u-row{
     margin: 0!important;
